# g2o_learning

./: CMakeLists.txt  README.md
data/: sphere_after.g2o
src/: CMakeLists.txt  main.cpp
